// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XML Node Parse closing tag with unquoted value ending with // 1`] = `
[
  [
    "warning",
    "attribute "lazy/" missed quot(")!",
    {
      "columnNumber": 9,
      "lineNumber": 5,
    },
  ],
]
`;

exports[`XML Node Parse closing tag with unquoted value following / 1`] = `
[
  [
    "warning",
    "attribute "lazy" missed quot(")!",
    {
      "columnNumber": 9,
      "lineNumber": 5,
    },
  ],
]
`;

exports[`XML Node Parse closing tag with unquoted value following space and / 1`] = `
[
  [
    "warning",
    "attribute "lazy" missed quot(")!!",
    {
      "columnNumber": 9,
      "lineNumber": 5,
    },
  ],
]
`;

exports[`XML Node Parse closing tag with unquoted value including /  followed by space / 1`] = `
[
  [
    "warning",
    "attribute "lazy/" missed quot(")!!",
    {
      "columnNumber": 9,
      "lineNumber": 5,
    },
  ],
]
`;

exports[`XML Node Parse closing tag without attribute value 1`] = `
[
  [
    "warning",
    "attribute "lazy" missed value!! "lazy" instead!!",
    {
      "columnNumber": 9,
      "lineNumber": 5,
    },
  ],
]
`;

exports[`XML Node Parse simple attributes should be able to have \`__prototype__\` attribute 1`] = `
{
  "actual": "<xml __prototype__=""/>",
}
`;

exports[`XML Node Parse simple attributes should be able to have \`constructor\` attribute 1`] = `
{
  "actual": "<xml constructor=""/>",
}
`;
